# Deep_Expert_Agent_Builder

./: .env.example  README.md  RUNBOOK.md  litellm.config.yaml  pyproject.toml
.planning/: .continue-here.md  ARCHITECTURE.md  HANDOFF.json  PROJECT.md  ROADMAP.md
.planning/issues/: azure_content_filter_false_positive.md  azure_trusted_deployment_spec.md
.planning/phases/: phase6_target_deployment_design.md
.planning/phases/01-dea-context/: PLAN.md
.planning/phases/phase6_reference/: AMENDMENT-001-openai-responses-target.md  LITELLM-CONNECTION-DETAILS.md  SPOCK_SPEC_v1.1.md  grok_api_spec_research.md  hermes_agent_spec_research.md
.planning/reference/: context_normalization_pipeline_readme.md  expert_six_worksheet_v3_template.md
.planning/reference/modern_ux_design_example/: completed_intake_worksheet.md  context_document.md  research_prompt.md
scripts/: README.md  new-agent.sh  smoke_stage1.py  start-litellm.sh
src/dea_builder/: __init__.py  __main__.py
src/dea_builder/cli/: __init__.py  main.py
src/dea_builder/config/: __init__.py
src/dea_builder/cost/: __init__.py  tracker.py
src/dea_builder/io/: __init__.py  workspace.py
src/dea_builder/llm/: __init__.py  client.py  content_safety.py
src/dea_builder/orchestration/: __init__.py
src/dea_builder/prompts/: __init__.py
src/dea_builder/research/: __init__.py  exa.py  firecrawl.py
src/dea_builder/stages/: __init__.py  dea_context.py  deployment_package.py  earl.py  epistemic_anchor.py  expert_six.py  expert_six_prompt.py  orchestrator.py  target_deploy.py
(+65 files in other folders)
