[project]
name = "dea-builder"
version = "0.1.0"
description = "Deep Expert Agent Builder — six-stage pipeline for creating deployment-ready AI agents"
requires-python = ">=3.12"
dependencies = [
    "tiktoken>=0.7.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.6.0",
    "langchain-exa>=1.1.0",
    "firecrawl-py>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.scripts]
dea-builder = "dea_builder.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dea_builder"]
